--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <h1 style="text-align: center;">Hi Web Administrator</h1>
         <p><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.images.express.co.uk%2Fimg%2Fdynamic%2F78%2F590x%2Fsecondary%2FAnonymous-logo-402778.jpg&amp;f=1&amp;nofb=1&amp;ipt=4e5745ef3ee4a81b8dc48991607f8d561b62b66b1082e8da9942f8c0f567b623&amp;ipo=images" width="150" height="150" alt="" style="display: block; margin-left: auto; margin-right: auto;" /></p>
         <h2 style="text-align: center;">Your Website has been HACKED</h2>
-        <p style="text-align: center;">Your Website, Domain and Data is now ours... for now</p>
+        <p style="text-align: center;">Your Website and data is now ours... for now</p>
         <p style="text-align: center;">Hack back your site and acknowledge your flaws</p>
         <p style="text-align: center;">Your Web security is next to non-existent</p>
         <p style="text-align: center;">Your Web Hosting Service is <span style="text-decoration: underline; color: #ff0000;"><strong>OLD</strong></span></p>
